# ChangeLog for media-gfx/exiv2
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/exiv2/ChangeLog,v 1.87 2010/04/18 19:24:55 maekke Exp $

  18 Apr 2010; Markus Meier <maekke@gentoo.org> exiv2-0.19.ebuild:
  amd64 stable, bug #306333

  18 Apr 2010; <nixnut@gentoo.org> exiv2-0.19.ebuild:
  ppc stable #306333

  04 Apr 2010; Raúl Porcel <armin76@gentoo.org> exiv2-0.19.ebuild:
  alpha/arm/ia64/s390/sh/sparc stable wrt #306333

  23 Mar 2010; Brent Baude <ranger@gentoo.org> exiv2-0.19.ebuild:
  stable ppc64, bug 306333

  04 Mar 2010; Jeroen Roovers <jer@gentoo.org> exiv2-0.19.ebuild:
  Stable for HPPA (bug #306333).

  03 Mar 2010; Christian Faulhammer <fauli@gentoo.org> exiv2-0.19.ebuild:
  stable x86, bug 306333

  24 Jan 2010; Sven Wegener <swegener@gentoo.org> exiv2-0.19.ebuild,
  +files/exiv2-0.19-syntax-fix.patch:
  Include a syntax fix from upstream, bug #302026.

*exiv2-0.19 (23 Jan 2010)

  23 Jan 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +exiv2-0.19.ebuild:
  Version bump (bug #283626).

  23 Jul 2009; Raúl Porcel <armin76@gentoo.org> exiv2-0.18.1.ebuild:
  arm/ia64/s390/sh stable wrt #273577

  19 Jul 2009; nixnut <nixnut@gentoo.org> exiv2-0.18.1.ebuild:
  ppc stable #273577

  29 Jun 2009; Brent Baude <ranger@gentoo.org> exiv2-0.18.1.ebuild:
  Marking exiv2-0.18.1 ppc64 for bug 273577

  15 Jun 2009; Tobias Klausmann <klausman@gentoo.org> exiv2-0.18.1.ebuild:
  Stable on alpha, bug #273577

  15 Jun 2009; Jeroen Roovers <jer@gentoo.org> exiv2-0.18.1.ebuild:
  Stable for HPPA (bug #273577).

  15 Jun 2009; Peter Volkov <pva@gentoo.org> exiv2-0.18.1.ebuild:
  amd64 stable, bug #273577

  11 Jun 2009; Stefan Briesenick <sbriesen@gentoo.org>
  exiv2-0.18.1-r1.ebuild:
  restored LINGUAS handling

  11 Jun 2009; Ferris McCormick <fmccor@gentoo.org> exiv2-0.18.1.ebuild:
  Sparc stable, fast stable for Bug #273577.
